# skner-lang

./: .gitignore  CMakeLists.txt  README.md  README_OLD.md  count_lines.sh
diagram_generator/: rail_diagram.py  requirements.txt
examples/: example1.sk  example2.sk
src/: main.cpp
src/error_handler/: ErrorHandler.cpp  ErrorHandler.h  ErrorHandlerMode.h
src/error_handler/exeptions/: ISknerException.h  InterpreterExeption.h  LexerException.h  ParserException.h  StreamProviderExeption.h
src/interpreter/: Evaluator.h  EvaluatorCommonImpl.cpp  ExpressionEvaluator.cpp  Helpers.h  Interpreter.cpp  Interpreter.h  StatementEvaluator.cpp  StdLibFunctions.cpp
src/interpreter/structures/: Interruptions.h
src/lexer/: Helpers.h  Lexer.cpp  Lexer.h  LexerTryBuildToken.cpp
src/lexer/structures/: Token.h  TokenType.h
src/parser/: Helpers.h  ParseExpressions.cpp  ParseStatements.cpp  Parser.cpp  Parser.h
src/stream_provider/: StreamProvider.cpp  StreamProvider.h
src/structures/: DataTypeVal.h  Position.h  Typedefs.h
src/structures/ast/: AstNodeType.h  Datatypes.h
src/structures/ast/ast_nodes/: NodesDeclarations.h  NodesIncludes.h
src/structures/ast/ast_nodes/common/: BaseFunctionCall.cpp  BaseFunctionCall.h
src/structures/ast/ast_nodes/expressions/: BooleanLiteral.h  FunctionCallExpression.h  NumberLiteral.h  StringLiteral.h  VariableReference.h
src/structures/ast/ast_nodes/expressions/additive/: AddExpression.h  SubtractExpression.h
src/structures/ast/ast_nodes/expressions/logical/: AndExpression.h  EqualExpression.h  GreaterEqualExpression.h  GreaterExpression.h  LessEqualExpression.h  LessExpression.h  NotEqualExpression.h  OrExpression.h
src/structures/ast/ast_nodes/expressions/multiplicative/: DivideExpression.h  ModuloExpression.h  MultiplyExpression.h
src/structures/ast/ast_nodes/expressions/unary/: EvaluateExpression.h  MinusExpression.h  NegateExpression.h
src/structures/ast/ast_nodes/statements/: Break.h  ConditionalStatementBlock.h  Continue.h  DeleteStatement.h  Exit.h  FunctionCallStatement.h  FunctionDefinition.h  IfStatement.h  ReturnStatement.h  StatementBlock.h  VariableAssignment.h  VariableDefinition.h  WhileStatement.h
src/structures/ast/ast_nodes/virtual/: IAstNode.h  IBinaryExpression.h  IExpression.h  ILiteralNodeT.h  IStatement.h  IUnaryExpression.h
src/structures/ast/ast_visitor/: HelperTraverser.cpp  HelperTraverser.h  ICommonVisitor.h  IExpressionVisitor.h  IStatementVisitor.h
src/tests/: doctest.h
src/tests/helpers/: Helpers.h  SsEvaluator.h  SsLexer.h  SsParser.h
src/tests/interpreter/: TestInterpreter.cpp
src/tests/lexer/: TestLexerMethods.cpp
src/tests/lexer/tokens/: TestBooleanLiterals.cpp  TestComments.cpp  TestETX.cpp  TestIdentifiers.cpp  TestKeywords.cpp  TestNewline.cpp  TestNumberLiterals.cpp  TestOperators.cpp  TestStringLiterals.cpp  TestWhitespaces.cpp
src/tests/parser/parse_methods/: TestExpressions.cpp  TestFunctionCalls.cpp  TestStatements.cpp
